add / route and nodemon for local dev

--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "my first simple api using express",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "preet sangha",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
