--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "preet sangha",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3"
   },
